tests/sksl/errors/SpuriousFloat.sksl
void main() {
    float x;
    x = 1.5 2.5;
}
